# svgx

./: Cargo.toml  README.md
.github/workflows/: ci.yml  npm-publish.yml
benches/: bench_main.rs
npm/: package-lock.json  package.json  test-wasm.mjs  verify.mjs
npm/examples/vite-app/: index.html  package.json  vite.config.js
npm/examples/webpack-app/: package-lock.json  package.json  webpack.config.js
npm/examples/webpack-app/src/: index.js
npm/svgtidy-loader/: package.json  tsconfig.json
npm/svgtidy-loader/src/: index.ts  wasm-load.ts
npm/vite-plugin-svgtidy/: package.json
npm/vite-plugin-svgtidy/src/: index.ts
src/: lib.rs  main.rs  parser.rs  printer.rs  tree.rs  visitor.rs
src/plugins/: cleanup_attrs.rs  cleanup_ids.rs  cleanup_list_of_values.rs  collections.rs  convert_ellipse_to_circle.rs  convert_one_stop_gradients.rs  convert_path_data.rs  convert_style_to_attrs.rs  convert_transform.rs  merge_paths.rs  mod.rs  move_group_attrs_to_elems.rs  remove_comments.rs  remove_desc.rs  remove_doctype.rs  remove_editors_ns_data.rs  remove_empty_containers.rs  remove_metadata.rs  remove_style_element.rs  remove_title.rs  remove_unknowns_and_defaults.rs  remove_unused_ns.rs  remove_useless_defs.rs  remove_useless_stroke_and_fill.rs  remove_xml_proc_inst.rs  sort_attrs.rs  sort_defs_children.rs
www/: README.md  package-lock.json  package.json  vite.config.ts
www/src/: App.css  App.tsx  index.css  svgtidy.d.ts
www/src/components/: Docs.tsx  Header.css  Header.tsx  Hero.css  Hero.tsx  Playground.css  Playground.tsx
