[package]
name = "svgtidy"
version = "0.1.0"
edition = "2021"
description = "High-performance SVG optimizer written in Rust"
authors = ["Kyrie Lin"]
repository = "https://github.com/honkinglin/svgtidy"
license = "MIT"
readme = "README.md"
keywords = ["svg", "optimizer", "wasm", "webassembly"]
categories = ["multimedia::images", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
xmlparser = "0.13"
clap = { version = "4.4", features = ["derive"] }
indexmap = "2.1"
regex = "1.12.2"
walkdir = "2.5.0"
rayon = "1.11.0"
wasm-bindgen = "0.2.106"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_main"
harness = false
